src/test/ui/mismatched_types/E0053.stderr
error[E0053]: method `foo` has an incompatible type for trait
  --> $DIR/E0053.rs:19:15
   |
12 |     fn foo(x: u16);
   |               --- type in trait
...
19 |     fn foo(x: i16) { }
   |               ^^^ expected u16, found i16
   |
   = note: expected type `fn(u16)`
              found type `fn(i16)`

error[E0053]: method `bar` has an incompatible type for trait
  --> $DIR/E0053.rs:21:12
   |
13 |     fn bar(&self);
   |            ----- type in trait
...
21 |     fn bar(&mut self) { }
   |            ^^^^^^^^^ types differ in mutability
   |
   = note: expected type `fn(&Bar)`
              found type `fn(&mut Bar)`

error: aborting due to 2 previous errors

